tests/should_fail/inner_function_scope_1.sd
main :: () {
    myInt := 10;
    a :: () {
        // Assert on this
        //.\test.sd:4:20 error: Undecalred identifier 'myInt'
        //4 |         print("%", myInt);
        print("%", myInt);
    };

    print("%", myInt);
}